@@ -1,6 +1,7 @@
 v4.12.1 ??? 2011
   - Added support for the __getattribute__, __getattr__, __setattr__ and
     __delattr__ methods.
+  - Added the /RaisesPyException/ function annotation.
 
 v4.12 23rd December 2010
   - Implemented the revised directive syntax for %Module.
